--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy" :"http://127.0.0.1:8888",
+  "proxy": "http://127.0.0.1:8888",
   "name": "my_app",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "run": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
