--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "python-shell": "^3.0.1",
     "querystring": "^0.2.1"
   }
 }
